解决打jar包出现的问题