@@ -27,6 +27,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.7.8</version>
         </dependency>
         <!-- SpringCloud Alibaba Nacos -->
         <dependency>
@@ -83,6 +84,7 @@
         <dependency>
             <groupId>blossom.project</groupId>
             <artifactId>Towelove-Framework-OSS</artifactId>
+            <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>blossom.project</groupId>
@@ -143,9 +145,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>19</source>
+                    <target>19</target>
                 </configuration>
             </plugin>
         </plugins>
